--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ h1 {
  section, p { 
 	
 	background-color: gray;
-	width: 96%
+	/*
 	margin-left: auto;
-	margin-right: auto;
-	padding: 10px;
+	margin-right: auto;*/
+	padding: 5px;
 	font-family: Helvetica;
 	color: black;
 	position: relative;
