--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@ h1 {
  section, p { 
 	
 	background-color: gray;
-	/*
-	margin-left: auto;
-	margin-right: auto;*/
+	width: 100;
 	padding: 5px;
 	font-family: Helvetica;
 	color: black;
