--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 	
 	background-color: gray;
 	width: 100;
+
 	padding: 5px;
 	font-family: Helvetica;
 	color: black;
@@ -34,6 +35,8 @@ div .doll {
 	height:12%;
 	text-align: center;
 	margin-top: 0;
+	box-sizing: border-box;
+
 	
 	background-color: #DEB887;
 	position: absolute;
