--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ div > section {
 	}
 div .doll {
 	border: 1px solid black;
-	padding: 10px, 10px, 10px, 10px;
+	padding: 10px;
 	width: 25%;
 	height:12%;
 	text-align: center;
@@ -48,7 +48,7 @@ div .doll {
 
 	div .boll {
 	border: 1px solid black;
-	padding: 10px, 10px, 10px, 10px;
+	padding: 10px;
 	width: 25%;
 	height:12%;
 	text-align: center;
@@ -62,7 +62,7 @@ div .doll {
 
 div .toll {
 	border: 1px solid black;
-	padding: 10px, 10px, 10px, 10px;
+	padding: 10px;
 	width: 25%;
 	height:12%;
 	text-align: center;
